--- a/git-interface/git interface.glade
+++ b/git-interface/git interface.glade
@@ -106,20 +106,6 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="commit_button">
-                <property name="label" translatable="yes">Commit</property>
-                <property name="height-request">49</property>
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">True</property>
-                <property name="vexpand">False</property>
-              </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">1</property>
-              </packing>
-            </child>
-            <child>
               <!-- n-columns=1 n-rows=1 -->
               <object class="GtkGrid" id="buttons_staging_grid">
                 <property name="visible">True</property>
@@ -170,7 +156,7 @@
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <child>
-                          <object class="GtkListBox" id="staged_list">
+                          <object class="GtkListBox" id="staging_list">
                             <property name="name">staged_changes_list</property>
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
@@ -217,7 +203,7 @@
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
                         <child>
-                          <object class="GtkListBox" id="changes_list">
+                          <object class="GtkListBox" id="unstaging_list">
                             <property name="visible">True</property>
                             <property name="can-focus">False</property>
                           </object>
@@ -234,6 +220,46 @@
               <packing>
                 <property name="left-attach">0</property>
                 <property name="top-attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <!-- n-columns=2 n-rows=1 -->
+              <object class="GtkGrid">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <child>
+                  <object class="GtkButton" id="commit_button">
+                    <property name="label" translatable="yes">Commit</property>
+                    <property name="height-request">49</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
+                    <property name="hexpand">True</property>
+                    <property name="vexpand">False</property>
+                  </object>
+                  <packing>
+                    <property name="left-attach">0</property>
+                    <property name="top-attach">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="refresh_button">
+                    <property name="label">gtk-refresh</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">True</property>
+                    <property name="use-stock">True</property>
+                    <property name="always-show-image">True</property>
+                  </object>
+                  <packing>
+                    <property name="left-attach">1</property>
+                    <property name="top-attach">0</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="left-attach">0</property>
+                <property name="top-attach">1</property>
               </packing>
             </child>
           </object>
