--- a/git-interface/git_interface.glade
+++ b/git-interface/git_interface.glade
@@ -8,31 +8,9 @@
     <property name="default-height">400</property>
     <child>
       <!-- n-columns=1 n-rows=4 -->
-      <object class="GtkGrid">
+      <object class="GtkGrid" id="branch_window_grid">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
-        <child>
-          <object class="GtkAccelLabel" id="new_branch_label">
-            <property name="name">Changes</property>
-            <property name="visible">True</property>
-            <property name="can-focus">False</property>
-            <property name="hexpand">True</property>
-            <property name="vexpand">False</property>
-            <property name="label" translatable="yes">Insert the new name branch</property>
-            <property name="justify">right</property>
-            <property name="ellipsize">end</property>
-            <attributes>
-              <attribute name="font-desc" value="Garuda Bold 10"/>
-              <attribute name="scale" value="1.3"/>
-              <attribute name="foreground" value="#00007ae023b3"/>
-              <attribute name="strikethrough-color" value="#000000000000"/>
-            </attributes>
-          </object>
-          <packing>
-            <property name="left-attach">0</property>
-            <property name="top-attach">0</property>
-          </packing>
-        </child>
         <child>
           <object class="GtkAccelLabel" id="branch_names">
             <property name="name">Changes</property>
@@ -56,13 +34,35 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkAccelLabel" id="new_branch_label">
+            <property name="name">Changes</property>
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="hexpand">True</property>
+            <property name="vexpand">False</property>
+            <property name="label" translatable="yes">Insert the new name branch</property>
+            <property name="justify">right</property>
+            <property name="ellipsize">end</property>
+            <attributes>
+              <attribute name="font-desc" value="Garuda Bold 10"/>
+              <attribute name="scale" value="1.3"/>
+              <attribute name="foreground" value="#00007ae023b3"/>
+              <attribute name="strikethrough-color" value="#000000000000"/>
+            </attributes>
+          </object>
+          <packing>
+            <property name="left-attach">0</property>
+            <property name="top-attach">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkScrolledWindow" id="scrolled_window">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <property name="shadow-type">in</property>
             <child>
-              <object class="GtkViewport">
+              <object class="GtkViewport" id="branch_viewport">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <child>
@@ -81,7 +81,7 @@
         </child>
         <child>
           <!-- n-columns=2 n-rows=1 -->
-          <object class="GtkGrid">
+          <object class="GtkGrid" id="entry_grid">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <child>
@@ -217,7 +217,7 @@
     <property name="can-focus">False</property>
     <child>
       <!-- n-columns=1 n-rows=7 -->
-      <object class="GtkGrid">
+      <object class="GtkGrid" id="merge_grid">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <child>
@@ -243,13 +243,13 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkScrolledWindow" id="current_scrolled">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <property name="shadow-type">in</property>
             <child>
-              <object class="GtkViewport">
+              <object class="GtkViewport" id="viewport_current">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
@@ -271,13 +271,13 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkScrolledWindow" id="incoming_scrolled">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <property name="shadow-type">in</property>
             <child>
-              <object class="GtkViewport">
+              <object class="GtkViewport" id="viewport_incoming">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
@@ -299,13 +299,13 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkScrolledWindow" id="old_scrolled">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <property name="shadow-type">in</property>
             <child>
-              <object class="GtkViewport">
+              <object class="GtkViewport" id="viewport_old">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
@@ -328,7 +328,7 @@
         </child>
         <child>
           <!-- n-columns=3 n-rows=1 -->
-          <object class="GtkGrid">
+          <object class="GtkGrid" id="grid_buttons">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <child>
@@ -347,7 +347,7 @@
             </child>
             <child>
               <object class="GtkButton" id="accept_incoming_button">
-                <property name="label" translatable="yes">Accept Incomming</property>
+                <property name="label" translatable="yes">Accept Incoming</property>
                 <property name="width-request">185</property>
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
@@ -379,17 +379,18 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkScrolledWindow" id="new_scrolled">
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="vexpand">True</property>
             <property name="shadow-type">in</property>
             <child>
-              <object class="GtkViewport">
+              <object class="GtkViewport" id="viewport_new">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
                 <property name="hexpand">True</property>
                 <property name="vexpand">True</property>
+                <property name="shadow-type">none</property>
                 <child>
                   <object class="GtkLabel" id="new_content_label">
                     <property name="visible">True</property>
