--- a/git-interface/git_interface.glade
+++ b/git-interface/git_interface.glade
@@ -177,7 +177,11 @@
     </child>
   </object>
   <object class="GtkWindow" id="merge_window">
+    <property name="width-request">550</property>
+    <property name="height-request">300</property>
     <property name="can-focus">False</property>
+    <property name="default-width">1000</property>
+    <property name="default-height">600</property>
     <child>
       <!-- n-columns=1 n-rows=3 -->
       <object class="GtkGrid" id="merge_grid">
@@ -731,6 +735,7 @@
                 <child>
                   <!-- n-columns=1 n-rows=2 -->
                   <object class="GtkGrid" id="grid_drawing_area">
+                    <property name="width-request">70</property>
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <child>
